<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="TypographyDashes">Лаб2 ПЗПІ-16-2 Любченко</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="importance">Importance</string>
    <string name="importance1">Low</string>
    <string name="importance2">Normal</string>
    <string name="importance3">High</string>
    <string name="pick_date">Date</string>
    <string name="pick_image">Image</string>
    <string name="save">Save</string>
    <string name="image_view">image view</string>
    <string name="attached_image">Attached image</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_delete">Delete</string>
    <string name="filter_save">apply</string>
    <string name="filtering_toolbar_title">Filtering</string>
    <string name="filter_clear">clear</string>
    <string name="create_note_title">Create note</string>
    <string name="update">update</string>
</resources>
